# emojivending

./: .gitignore  MANIFEST.in  Makefile  Readme.md  docker-compose.yml  setup.cfg
emoji/: parse_emoji.py
infra/cfn/: emojivending_demo.yaml
infra/grafana/: dashboard.json  grafana.env
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/datasources/: prometheus.yml
infra/locust/: Dockerfile  generate_traffic.py
infra/prometheus/: prometheus.yml
locust/: generate_traffic.py
src/vending/: app.py  cli.py  emoji.py  forms.py
src/vending/data/: emoji-test.json
src/vending/templates/: base.html.j2  emoji.html.j2  error.html.j2  give_emoji.html.j2  landing.html.j2  show_emoji.html.j2
tests/: conftest.py  test_basic.py  test_metris.py
