[metadata]
name = vending-machine
description = "Instrumenta tu app con Prometheus, compaing code"
long_description = file: README.rst

version = 2018.09.1
author = Agustín Herranz Cecilia
url = https://github.com/tinproject/....
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7


[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
python_requires >= 3.5
install_requires =
    Flask~=1.0.0
    prometheus_client==0.3.1


[options.packages.find]
where = src
exclude =
    tests


[options.extras_require]
dev =
    check-manifest
test =
    pytest
    pytest-flask
    flake8


[options.entry_points]
# To provide executable scripts, use entry points in preference to the
# "scripts" keyword. Entry points provide cross-platform support and allow
# pip to create the appropriate form of executable for the target platform.
console_scripts =
    vending-machine = vending.cli:cli


[options.package_data]
sample = package_data.dat


[egg_info]
tag_build = .dev
tag_date = 1
egg_base = src

[aliases]
release = egg_info -Db ''


[test]
# py.test options when running `python setup.py test`
addopts = --verbose
extras = True
